<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">piWPWBhDFnOA5MvwpT4hUDrH57fSR7T3Js5tRt7K</string>
    <string name="back4app_client_key">aBk9DFZeBt5oPKmBEgoD3wV5vvkhBsetwUSlryLQ</string>
    <string name="textEmail">Enter Your Email</string>
    <string name="textUsername">Enter your Username</string>
    <string name="textPassword">Enter your Pasword</string>
    <string name="btnSignUpUser">Sign Up</string>
    <string name="btnLogInUser">Log In</string>
    <string name="textEmailLogin">Please Enter your LogIn Email</string>
    <string name="textPasswordLogin">Please Enter your Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editProfieName">Please Enter a Profile Name</string>
    <string name="editProfieBio">Please Enter your Bio</string>
    <string name="editProfieHobbies">Please Enter your hobbies</string>
    <string name="editProfieSport">Please Enter your Favorite Sport</string>
    <string name="editProfieProfession">Please Enter your profession</string>
    <string name="btnUpdateInfo">UPDATE INFO</string>
    <string name="textLoading">Loading Users... Please Wait</string>
    <string name="textImgName">Image Name</string>
    <string name="btnShareImage">SHARE IMAGE</string>


</resources>
