<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraineLayoutSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44D27"
    android:onClick="rootLayoutTap"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imgBrandIcon"
        android:layout_width="149dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instagram"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="#E75D8B"
        android:fontFamily="@font/amita"
        android:hint="@string/textEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBrandIcon"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/textUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#E75D8B"
        android:fontFamily="@font/amita"
        android:hint="@string/textUsername"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#E75D8B"
        android:fontFamily="@font/amita"
        android:hint="@string/textPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsername"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnSignUpUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#365FF4"
        android:fontFamily="@font/amita"
        android:padding="10dp"
        android:text="@string/btnSignUpUser"
        android:textColor="#130909"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <Button
        android:id="@+id/btnLogInUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#F0DB0B"
        android:fontFamily="@font/amita"
        android:padding="10dp"
        android:text="@string/btnLogInUser"
        android:textColor="#110B0B"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpUser" />

</androidx.constraintlayout.widget.ConstraintLayout>