<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLogIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C24EDB"
    android:onClick="rootLayoutTapped"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/imgBrandIconLogin"
        android:layout_width="149dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instagram"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/textEmailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/textEmailLogin"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:background="#F44D27"
        android:fontFamily="@font/amita"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBrandIconLogin"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/textPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#F44D27"
        android:fontFamily="@font/amita"
        android:hint="@string/textPasswordLogin"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailLogin"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnLogInUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btnLogInUser"
        android:fontFamily="@font/amita"
        android:padding="10dp"
        android:background="#22C22A"
        android:textColor="#0E0505"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPasswordLogin" />

    <Button
        android:id="@+id/btnSignUpUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#2E49F5"
        android:fontFamily="@font/amita"
        android:padding="10dp"
        android:text="@string/btnSignUpUser"
        android:textColor="#0C0A0A"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogInUserLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>